@@ -1,0 +1,311 @@
+# this file is part of refractiveindex.info database
+# refractiveindex.info database is in the public domain
+# copyright and related rights waived via CC0 1.0
+
+REFERENCES: "A. Kumar, R. C. Rai, N. J. Podraza, S. Denev, M. Ramirez, Y.-H. Chu, L. W. Martin, J. Ihlefeld, T. Heeg, J. Schubert, D. G. Schlom, J. Orenstein, R. Ramesh, R. W. Collins, J. L. Musfeldt and V. Gopalan. Linear and nonlinear optical properties of BiFeO<sub>3</sub>, <a href=\"http://dx.doi.org/10.1063/1.2901168\"><i> Appl. Phys. Lett. </i> <b>92</b>, 121915 (2008)</a>"
+COMMENTS: "T = 273 K (0 °C)."
+DATA:
+  - type: tabulated n
+    data: |
+        0.19656986172865556 2.190136387898576
+        0.20231584764674637 2.1976518831786924
+        0.20806183356483712 2.205167378458808
+        0.21379873731340507 2.2014550416663643
+        0.21953564106197304 2.1977427048739204
+        0.22527557220038197 2.197772978772329
+        0.23102458550831365 2.209031084743299
+        0.23677359881624532 2.220289190714268
+        0.2425377490733817 2.250260350139505
+        0.24830795411019999 2.2877167309464483
+        0.2468548069865521 2.265253498326725
+        0.25120213879813186 2.31767275342248
+        0.25409632348606376 2.3476287758985115
+        0.2569905081739957 2.377584798374543
+        0.2555131419316204 2.325180680227993
+        0.2598846928619276 2.407540820850574
+        0.2584073266195524 2.355136702704025
+        0.26325922340462093 2.439994439945377
+        0.26616551765191654 2.4849209051848207
+        0.2690697936393182 2.5273522966303643
+        0.27197608788661387 2.5722787618698097
+        0.27488238213390953 2.6172052271092547
+        0.27731034878633776 2.6621291695238325
+        0.28070708018786455 2.7220286003515586
+        0.27876955068966736 2.692077623525262
+        0.28313504684029284 2.7669525427661363
+        0.28653177824181963 2.8268519735938633
+        0.28459424874362255 2.7969009967675658
+        0.28455186528584936 2.7445044470956184
+        0.2889597448942478 2.8717759160084397
+        0.2923564762957746 2.9316753468361663
+        0.2904189467975775 2.9017243700098696
+        0.29526277054307026 2.976601812075612
+        0.2981690647903659 3.021528277315057
+        0.3005970314427941 3.0664522197296344
+        0.30224393151626167 3.3284425365639736
+        0.30397156198548736 3.098905838824436
+        0.30201384988835084 3.044004124059117
+        0.3063975103780217 3.141334707445112
+        0.30929169506595366 3.171290729921143
+        0.3078143288235783 3.118886611774593
+        0.3126662256086469 3.2037443490159445
+        0.31844248542514697 3.2486859512045947
+        0.31650899244673775 3.223725121966102
+        0.32420663568228336 3.278657110629831
+        0.3222731427038742 3.2536962813913384
+        0.32948438530497653 3.2986454520545907
+        0.33523037122306715 3.306160947334707
+        0.34097030236147613 3.3061912212331164
+        0.34670115133036217 3.2949936630589653
+        0.3524320002992483 3.2837961048848148
+        0.35098490795528237 3.2688180936467988
+        0.35815982187829354 3.2688559360198104
+        0.35671272953432753 3.2538779247817944
+        0.36388461606749783 3.250173156463953
+        0.3696184924262248 3.2427182089806554
+        0.3753584235646337 3.2427484828790645
+        0.3811074368725654 3.254006588850034
+        0.38734587820478134 3.2789901235123344
+        0.38541238522637206 3.2540292942738414
+        0.39264179216652 3.321434129082214
+        0.39118864504287215 3.298970896462491
+        0.3955359768544519 3.3513901515582454
+        0.3989105073971452 3.383843770653047
+        0.4013364557896794 3.4262726392737224
+        0.4042306404776114 3.456228661749754
+        0.4027532742352361 3.4038245436032044
+        0.40760517102030475 3.4886822808445555
+        0.405647458923168 3.4337805660792364
+        0.4105094470077064 3.531113672290098
+        0.415807379229339 3.5760527516538807
+        0.41434817732600937 3.546104297652452
+        0.41918190977203235 3.6085063707486813
+        0.42446571417440737 3.635979933555149
+        0.4230125670507595 3.6135167009354254
+        0.4302056453128162 3.6360102074535576
+        0.4359395216715433 3.6285552599702613
+        0.4416673432505884 3.613615091105257
+        0.4416491789115428 3.5911594269601363
+        0.44738305527026984 3.5837044794768387
+        0.4473648909312243 3.5612488153317186
+        0.4530987672899513 3.5537938678484213
+        0.4530806029509057 3.5313382037033008
+        0.458802369750269 3.5089128134565897
+        0.46451808176995046 3.4790022018281723
+        0.4678401375554009 3.4465839022815152
+        0.47309164979947266 3.4341362843855463
+        0.4730734854604271 3.4116806202404253
+        0.47880736181915406 3.404225672757128
+        0.48452912861851744 3.381800282510417
+        0.4873839572385172 3.363102366005355
+        0.4931148062074032 3.3519048078312035
+        0.4988426277864484 3.3369646389662004
+        0.5045704493654937 3.322024470101196
+        0.5102982709445387 3.3070843012361912
+        0.5160200377439021 3.2846589109894806
+        0.5217478593229473 3.2697187421244767
+        0.5203007669789813 3.2547407308864607
+        0.5274635713426287 3.2398081304960584
+        0.533191392921674 3.2248679616310545
+        0.5317443005777079 3.2098899503930385
+        0.5389071049413553 3.1949573500026367
+        0.5446349265204005 3.1800171811376323
+        0.5446167621813549 3.1575615169925118
+        0.550350638540082 3.150106569509215
+        0.5560784601191272 3.135166400644211
+        0.5546313677751613 3.1201883894061946
+        0.5618002269184906 3.1127410103974995
+        0.5646550555384903 3.094043093892438
+        0.5703859045073763 3.0828455357182865
+        0.5761137260864215 3.0679053668532825
+        0.5818415476654666 3.0529651979882786
+        0.5875693692445116 3.038025029123274
+        0.5933032456032388 3.0305700816399765
+        0.599031067182284 3.0156299127749726
+        0.6047649435410111 3.0081749652916754
+        0.6104957925098972 2.9969774071175244
+        0.6162296688686242 2.9895224596342267
+        0.6219605178375103 2.978324901460076
+        0.6276943941962373 2.970869953976779
+        0.6334282705549642 2.963415006493481
+        0.6391591195238502 2.95221744831933
+        0.6448960232724182 2.9485051115268863
+        0.6506298996311453 2.9410501640435887
+        0.6563637759898725 2.9335952165602923
+        0.6621006797384403 2.929882879767848
+        0.6678345560971675 2.92242793228455
+        0.6735714598457354 2.9187155954921065
+        0.6793053362044625 2.9112606480088083
+        0.6850392125631896 2.9038057005255116
+        0.6907791437015984 2.9038359744239197
+        0.6965130200603253 2.896381026940623
+        0.7022468964190525 2.8889260794573257
+        0.7079868275574615 2.8889563533557348
+        0.7137207039161884 2.881501405872437
+        0.7194576076647563 2.877789069079993
+        0.7251945114133244 2.8740767322875493
+        0.7309344425517332 2.874107006185959
+        0.7366683189104604 2.8666520587026616
+        0.7424021952691874 2.859197111219364
+        0.7481421264075963 2.8592273851177734
+        0.7538820575460053 2.8592576590161825
+        0.7596159339047321 2.851802711532885
+        0.7653558650431412 2.8518329854312947
+        0.7710897414018684 2.844378037947997
+        0.7768296725402771 2.8444083118464065
+        0.7825696036786861 2.844438585744816
+        0.788303480037413 2.8369836382615183
+        0.7940434111758218 2.8370139121599283
+        0.7997772875345488 2.8295589646766297
+        0.8055172186729578 2.82958923857504
+        0.8112571498113667 2.8296195124734487
+        0.8169910261700938 2.8221645649901514
+        0.8227309573085027 2.822194838888561
+        0.8284708884469114 2.8222251127869704
+        0.8342047648056384 2.8147701653036723
+        0.8399446959440476 2.8148004392020822
+        0.8456846270824564 2.8148307131004917
+        0.8514215308310243 2.8111183763080474
+        0.8571584345795923 2.807406039515603
+        0.8628983657180013 2.807436313414013
+        0.8686382968564101 2.8074665873124216
+        0.8743752006049782 2.8037542505199777
+        0.8801121043535461 2.8000419137275343
+        0.885852035491955 2.800072187625944
+        0.8915919666303639 2.8001024615243524
+        0.8973288703789317 2.7963901247319085
+        0.9030657741274998 2.7926777879394638
+        0.9088057052659089 2.7927080618378737
+        0.9145426090144767 2.7889957250454303
+        0.9202795127630446 2.785283388252985
+        0.9260194439014535 2.7853136621513945
+        0.9317593750398624 2.785343936049804
+        0.9374993061782714 2.785374209948213
+        0.9432392373166805 2.7854044838466234
+        0.9489791684550893 2.7854347577450316
+        0.9547160722036572 2.7817224209525877
+        0.9604529759522252 2.7780100841601443
+        0.966192907090634 2.7780403580585533
+        0.971932838229043 2.778070631956963
+        0.9776697419776108 2.774358295164519
+        0.9834066457261789 2.7706459583720746
+        0.9891465768645876 2.770676232270484
+        0.9948865080029967 2.770706506168893
+        1.0006264391414057 2.7707367800673026
+        1.0063663702798142 2.770767053965712
+        1.0121063014182232 2.7707973278641216
+        1.0178462325566322 2.77082760176253
+        1.0235831363052004 2.7671152649700863
+        1.0293200400537683 2.7634029281776424
+        1.035059971192177 2.763433202076052
+        1.0407999023305858 2.7634634759744614
+        1.0465398334689948 2.763493749872871
+        1.052279764607404 2.76352402377128
+        1.058016668355972 2.759811686978836
+        1.0637535721045401 2.756099350186392
+        1.0694935032429487 2.756129624084801
+        1.0752334343813574 2.7561598979832107
+        1.0809733655197662 2.75619017188162
+        1.0867132966581754 2.756220445780029
+        1.0924532277965844 2.7562507196784383
+        1.098193158934993 2.756280993576848
+        1.103933090073402 2.756311267475257
+        1.109673021211811 2.7563415413736667
+        1.1154129523502199 2.756371815272076
+        1.121146828708947 2.7489168677887785
+        1.126886759847356 2.748947141687188
+        1.1326266909857647 2.7489774155855966
+        1.1383666221241737 2.7490076894840065
+        1.1441065532625825 2.749037963382416
+        1.1498464844009917 2.7490682372808246
+        1.1555864155394004 2.7490985111792337
+        1.1613233192879684 2.7453861743867902
+        1.1670602230365361 2.7416738375943464
+        1.1728001541749453 2.741704111492756
+        1.178540085313354 2.741734385391165
+        1.184280016451763 2.741764659289574
+        1.1900199475901718 2.7417949331879834
+        1.1957598787285808 2.7418252070863933
+        1.2014998098669893 2.7418554809848024
+        1.2072397410053985 2.7418857548832114
+        1.2129796721438075 2.741916028781621
+        1.2187196032822165 2.74194630268003
+        1.2244595344206253 2.7419765765784394
+        1.2301994655590345 2.742006850476849
+        1.235939396697443 2.7420371243752584
+        1.2416732730561706 2.7345821768919607
+        1.2474132041945791 2.73461245079037
+        1.253153135332988 2.7346427246887792
+        1.2588930664713969 2.7346729985871887
+        1.2646329976098054 2.734703272485598
+        1.2703729287482146 2.734733546384008
+        1.2761128598866236 2.7347638202824167
+        1.2818527910250326 2.7347940941808258
+        1.2875927221634413 2.7348243680792352
+        1.2933326533018505 2.7348546419776447
+        1.2990725844402589 2.734884915876054
+        1.304812515578668 2.734915189774464
+        1.310552446717077 2.7349454636728727
+        1.316292377855486 2.7349757375712818
+        1.322026254214213 2.7275207900879845
+        1.327766185352622 2.727551063986394
+        1.3335061164910307 2.7275813378848035
+        1.3392460476294399 2.727611611783213
+        1.3449859787678486 2.727641885681622
+        1.3507259099062576 2.727672159580031
+        1.3564658410446664 2.7277024334784405
+        1.3622057721830756 2.72773270737685
+        1.3679457033214841 2.7277629812752595
+        1.3736856344598933 2.727793255173669
+        1.379425565598302 2.727823529072078
+        1.385165496736711 2.727853802970487
+        1.3909054278751196 2.727884076868897
+        1.3966453590135288 2.727914350767306
+        1.4023852901519376 2.7279446246657155
+        1.4081252212903463 2.727974898564125
+        1.4138651524287555 2.7280051724625345
+        1.4196050835671647 2.7280354463609435
+        1.425345014705573 2.728065720259353
+        1.4310849458439825 2.728095994157762
+        1.436824876982391 2.7281262680561715
+        1.442558753341118 2.7206713205728734
+        1.4482986844795267 2.720701594471283
+        1.4540386156179355 2.7207318683696924
+        1.4597785467563447 2.7207621422681023
+        1.4655184778947534 2.7207924161665105
+        1.4712584090331624 2.7208226900649204
+        1.4769983401715714 2.720852963963329
+        1.4827382713099806 2.7208832378617394
+        1.4884782024483891 2.7209135117601484
+        1.4942181335867981 2.720943785658558
+        1.4999580647252069 2.720974059556967
+        1.5056979958636159 2.7210043334553764
+        1.511437927002025 2.721034607353785
+        1.5171778581404334 2.7210648812521945
+        1.5229177892788426 2.7210951551506044
+        1.5286577204172516 2.7211254290490143
+        1.5343976515556603 2.7211557029474234
+        1.5401375826940695 2.721185976845832
+        1.5458775138324778 2.721216250744241
+        1.5516144175810465 2.7175039139517976
+        1.5573513213296142 2.7137915771593537
+        1.5630912524680234 2.713821851057763
+        1.568831183606432 2.713852124956172
+        1.5745711147448411 2.7138823988545813
+        1.5803110458832499 2.7139126727529908
+        1.5860509770216586 2.7139429466514
+        1.5917909081600674 2.7139732205498097
+        1.5975308392984766 2.7140034944482188
+        1.6032707704368854 2.714033768346628
+        1.6090107015752946 2.7140640422450373
+        1.6147506327137033 2.7140943161434468
+        1.620490563852112 2.714124590041856
+        1.626230494990521 2.7141548639402657
+        1.6319704261289298 2.7141851378386748
+        1.6377103572673388 2.714215411737084
+        1.6434502884057474 2.7142456856354933
+        1.649190219544157 2.7142759595339028
+        1.6549301506825658 2.7143062334323123
+        1.6606700818209745 2.7143365073307217
+        1.6664100129593833 2.7143667812291308
+        
